--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.scss
@@ -174,7 +174,7 @@
       }
 
       .detail-achive-line {
-        margin-left: 10px;
+        // margin-left: 10px;
         align-items: center;
 
         .line {
