--- a/src/app/chat/components/rate-deal/rate-deal.component.html
+++ b/src/app/chat/components/rate-deal/rate-deal.component.html
@@ -1,6 +1,6 @@
 <div class="rate-wrapper" *ngIf="!rated">
     <form class="rate" #form="ngForm" [formGroup]="rateForm" (ngSubmit)="submitRating()">
-        <h5>Пожалуйста оцените работу фрилансера</h5>
+        <h5>Пожалуйста оцените работу {{ isUserFreelancer? 'заказчика': 'фрилансера' }}</h5>
         <p>Выберите необходимое кол-во звёзд</p>
         <div class="stars">
             <div class="rate-item">
