--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
@@ -24,8 +24,8 @@
                 <ng-container *ngIf="user.busy === 0">свободен</ng-container>
               </span>
             </p>
-            <p>Проектов в работе: <span>2</span></p>
-            <p>Проектов в очереди: <span>2</span></p>
+            <p>Проектов в работе: <span>{{ user.dealsCounts.inProgressOffers }}</span></p>
+            <p>Проектов в очереди: <span>{{ user.dealsCounts.QueuedOffers }}</span></p>
           </div>
           <div class="status-toggle-block">
             <p>Изменить статус можно здесь</p>
@@ -36,7 +36,7 @@
               </div>
               <span (click)="changeWorkStatus(1)" [ngClass]="{active: user.busy === 1}">Загружен</span>
             </div>
-            <div class="btn" [routerLink]="['/user', user.purse.id] | localize">смотреть профиль</div>
+            <a class="btn open-prifile" [routerLink]="['/user', user.purse.id] | localize">смотреть профиль</a>
           </div>
 
         </div>
