--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -103,6 +103,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
+      min-width: 390px;
       .chart-body {
         display: flex;
         flex-direction: column;
@@ -159,7 +160,6 @@
         border-radius: 4px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         height: 100%;
         p {
@@ -171,12 +171,20 @@
           text-transform: uppercase;
           color: #323C47;
           padding: 0;
-          margin: 0 0  24px;
+          margin: 36px 0  24px;
+        }
+
+        a.open-prifile {
+          font-size: 13px;
+          line-height: 16px;
+          padding: 14px 24px;
+          margin: 36px 0 24px;
         }
       }
 
     }
     .request-settings {
+      min-width: 390px;
       .chart {
         padding: 60px 25px 35px 25px;
       }
