--- a/src/app/shared/modules/user-header-menu/user-header-menu.component.html
+++ b/src/app/shared/modules/user-header-menu/user-header-menu.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="menu" [ngClass]="menuOpen? 'open': 'close'">
     <ul>
-      <li> <a *ngIf="isUserFreelancer" [routerLink]="'/dashboard'| localize">Дашбоард</a> </li>
+      <li> <a [routerLink]="'/dashboard'| localize">Дашбоард</a> </li>
       <li> <a [routerLink]="'/dashboard/chat-room'| localize">чат</a> </li>
       <li> <a [routerLink]="'/dashboard/projects'| localize">проэкты</a> </li>
       <li> <a [routerLink]="'/dashboard/finance'| localize">финансы</a> </li>
