first version of support

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -33,3 +33,6 @@
 <section class="app-news">
     <app-home-page-app-news></app-home-page-app-news>
 </section>
+<section class="support">
+    <app-home-page-support></app-home-page-support>
+</section>
