--- a/src/app/home-page/home-page-advantages/home-page-advantages.component.html
+++ b/src/app/home-page/home-page-advantages/home-page-advantages.component.html
@@ -6,6 +6,7 @@
             <p class="main-info__text">
                 Добро пожаловать в сообщество веб-разработчиков, дизайнеров, создателей текстового, графического и видео контента, переводчиков и мастеров озвучки.
             </p>
+            <a class="btn colored" [routerLink]="['/auth'] | localize" >зарегистрироваться</a>
         </div>
     </div>
     <div class="features">
