--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -12,7 +12,8 @@
     display: flex;
     margin: auto;
     justify-content: space-between;
-    padding-top: 24px;
+    // padding-top: 24px;
+    padding: 10px 0;
     max-width: 1493px;
   }
 }
