--- a/src/app/home-page/home-page-support/home-page-support.component.html
+++ b/src/app/home-page/home-page-support/home-page-support.component.html
@@ -1,36 +1,16 @@
 <div class="wrapper">
-  <div class="personal">
-    <div class="orbit-container">
-      <div class="orbit orbit1">
-        <div class="sphere">
-          <img src="assets/images/home-page/face.png" alt="">
-          <div class="sub-text">Менеджер 3 по вопросам фрилансеров</div>
-        </div>
-      </div>
-      <div class="orbit orbit2">
-        <div class="sphere">
-          <img src="assets/images/home-page/face2.png" alt="">
-          <div class="sub-text">Менеджер 2 по вопросам фрилансеров</div>
-        </div>
-      </div>
-      <div class="orbit orbit3">
-        <div class="sphere">
-          <img src="assets/images/home-page/face3.png" alt="">
-          <div class="sub-text">Менеджер по вопросам фрилансеров</div>
-        </div>
-      </div>
-    </div>
+  <div class="personal-wrapper">
+    <app-home-page-support-personal></app-home-page-support-personal>
   </div>
-
   <div class="main-info">
     <div class="main-info__wrap">
-        <h3 class="section__subtitle">всегда на связи</h3>
-        <h2 class="section__title">Поддержка 24/7</h2>
-        <div class="main-info__text">
-            <p>Техническая и консультационная поддержка команды Gigrum, которая доступна круглые сутки каждый день недели.</p>
-        </div>
-        <a class="btn outline">Найти ответ</a>
+      <h3 class="section__subtitle">всегда на связи</h3>
+      <h2 class="section__title">Поддержка 24/7</h2>
+      <div class="main-info__text">
+        <p>Техническая и консультационная поддержка команды Gigrum, которая доступна круглые сутки каждый день недели.
+        </p>
+      </div>
+      <a class="btn outline">перейти на страницу поддержки</a>
     </div>
   </div>
-  
 </div>
