--- a/src/app/home-page/home-page-questions/home-page-questions.component.scss
+++ b/src/app/home-page/home-page-questions/home-page-questions.component.scss
@@ -212,3 +212,99 @@
 .mat-expansion-indicator::after{
   display: none!important;
 }
+
+@media (max-width: 1499px) {
+  .main-info{
+    width: 50%;
+    &__text{
+      font-size: 16px;
+      line-height: 23px;
+      color: #707683;
+      margin-bottom: 30px;
+      p{
+        margin-bottom: 20px;
+        &:first-child{
+          max-width: 300px;
+        }
+        &:last-child{
+          max-width: 300px;
+        }
+      }
+    }
+    .section__title{
+      max-width: 350px;
+    }
+  }
+  .guestion-tabs{
+    width: 50%;
+    min-height: 600px;
+    .tabs{
+      max-width: 500px;
+      &-list{
+          max-width: 300px;
+          .tab{
+              font-size: 18px;
+              line-height: 23px;
+          }
+      }
+      &-slider{
+         .indicator{
+              width: 135px;
+              &.activeOne{
+                  transform: translateX(0); 
+              }
+              &.activeTwo{
+                  transform: translateX(calc(300px - 100%));
+              }
+         }
+      }
+    }
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      z-index: -2;
+      bottom: 26%;
+      right: -15%;
+      width: 140px;
+      height: 170px;
+      background-image: url(/assets/images/images/dots-advantages.svg);
+      background-repeat: no-repeat;
+    }
+  }
+.question-item {
+  &__title {
+    font-size: 18px;
+    line-height: 24px;
+    padding: 27px 40px 27px;
+    .element-plus{
+      width: 15px;
+      height: 15px;
+      &::after {
+        width: 15px;
+        height: 3px;
+      }
+      &::before {
+        width: 15px;
+        height: 3px;
+      }
+    }
+  }
+  &__text {
+    font-size: 16px;
+    line-height: 23px;
+    padding: 0 16px 0;
+  }
+  &.active {
+    .question-item__title {
+      &::before {
+        transform: rotate(-90deg);
+      }
+    }
+
+  }
+  &:last-child {
+    border-bottom: none;
+  }
+}
+}
