--- a/src/app/home-page/home-page-search/home-page-search.component.scss
+++ b/src/app/home-page/home-page-search/home-page-search.component.scss
@@ -56,3 +56,18 @@
     border: 1px solid #fff;
   }
 }
+
+@media (max-width: 1499px) {
+  .section-subtitle {
+    font-size: 13px;
+    line-height: 16px;
+    margin: 0 0 32px;
+  }
+  
+  .section-title {
+    max-width: 700px;
+    font-size: 36px;
+    line-height: 43px;
+    margin: 0 0 44px;
+  }
+}
