--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -12,7 +12,7 @@
     </div>
     <app-home-page-advantages></app-home-page-advantages>
 </section>
-<section class="how-work">
+ <section class="how-work">
     <app-home-page-how-work></app-home-page-how-work>
 </section>
 <section class="find-specialist">
@@ -81,5 +81,9 @@
         <div class="copyright">
             <span>© Gigrum, все права защищены, 2019</span>
         </div>
+    </div>
+    <div class="arrows">
+        <img class="arrow" src="assets/images/home-page/gray-line.svg" alt="">
+        <img class="arrow" src="assets/images/home-page/gray-line2.svg" alt="">
     </div>
 </footer>
