--- a/src/app/home-page/home-page-support/home-page-support-personal/home-page-support-personal.component.html
+++ b/src/app/home-page/home-page-support/home-page-support-personal/home-page-support-personal.component.html
@@ -2,10 +2,10 @@
     <div class="orbit-container">
       <div class="orbit small">
         <div class="sphere large">
-          <img src="assets/images/home-page/face3.png" alt="">
-          <!-- <img src="assets/images/home-page/delet_this_shit1.png" alt=""> -->
-          <div class="sub-text">Менеджер 3 по вопросам фрилансеров</div>
-          <!-- <div class="sub-text">Твой софт говно</div> -->
+          <!-- <img src="assets/images/home-page/face3.png" alt=""> -->
+          <img src="assets/images/home-page/delet_this_shit1.png" alt="">
+          <!-- <div class="sub-text">Менеджер 3 по вопросам фрилансеров</div> -->
+          <div class="sub-text">Твой софт говно</div>
         </div>
         <div class="sphere medium">
             <img src="assets/images/home-page/face2.png" alt="">
@@ -24,8 +24,8 @@
       </div>
       <div class="orbit large">
         <div class="sphere medium">
-          <img src="assets/images/home-page/face4.png" alt="">
-          <!-- <img src="assets/images/home-page/delet_this_shit2.png" alt=""> -->
+          <!-- <img src="assets/images/home-page/face4.png" alt=""> -->
+          <img src="assets/images/home-page/delet_this_shit2.png" alt="">
           <div class="sub-text">Менеджер по вопросам фрилансеров</div>
         </div>
         <div class="sphere small">
