--- a/src/app/home-page/home-page-support/home-page-support-personal/home-page-support-personal.component.scss
+++ b/src/app/home-page/home-page-support/home-page-support-personal/home-page-support-personal.component.scss
@@ -45,7 +45,7 @@ $orbit-color: $gray;
     z-index: 3;
     left: 150px;
     top: 150px;
-
+    border: none;
     .sphere {
       animation: spinBack 18s linear infinite;
       &:nth-child(1) {
@@ -63,7 +63,7 @@ $orbit-color: $gray;
     z-index: 2;
     left: 100px;
     top: 100px;
-
+    border: none;
     .sphere {
       animation: spinBack 24s linear infinite;
 
@@ -219,5 +219,113 @@ $orbit-color: $gray;
 
   to {
     transform: rotate(360deg)
+  }
+}
+
+
+@media (max-width: 1499px) {
+  .orbit {
+    border: solid 1px #E9ECFB;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+  
+    &.small {
+      z-index: 3;
+      border-radius: 50%;
+      left: 100px;
+      top: 100px;
+  
+      .sphere {
+        animation: spinBack 18s linear infinite;
+        &:nth-child(1) {
+          bottom: 0;
+          right: -40px;
+        }
+  
+        &:nth-child(2) {
+          right: 20px;
+        }
+      }
+    }
+  
+    &.medium {
+      z-index: 2;
+      left: 50px;
+      top: 50px;
+      border-radius: 50%;
+      .sphere {
+        animation: spinBack 24s linear infinite;
+  
+        &:nth-child(1) {
+          bottom: 0;
+          left: -40px;
+        }
+  
+        &:nth-child(2) {
+          top: 40px;
+          left: 0;
+        }
+      }
+    }
+  
+    &.large {
+      border-radius: 50%;
+      .sphere {
+        animation: spinBack 30s linear infinite;
+        &:nth-child(1) {
+          top: -50px;
+          left: 40%;
+        }
+        &:nth-child(2) {
+          top: 120px;
+          right: 0;
+        }
+      }
+  
+      &::before {
+        width: 330px;
+        height: 330px;
+        border-radius: 50%;
+      }
+    }
+    .sphere {
+      .sub-text {
+        transform: scale(0) translateX(-50%);
+        font-size: 14px;
+        line-height: 16px;
+        width: 150px;
+        left: 50%;
+        padding-top: 6px;
+      }
+  
+      &.small {
+        width: 60px;
+        height: 60px;
+      }
+  
+      &.medium {
+        width: 95px;
+        height: 95px;
+      }
+  
+      &.large {
+        width: 110px;
+        height: 110px;
+        border: 3px solid #fff;
+      }
+    }
+  
+  }
+  .orbit.small {
+    @include orbit(250px, 0, 18s);
+  }
+  
+  .orbit.medium {
+    @include orbit(350px, 0, 24s);
+  }
+  
+  .orbit.large {
+    @include orbit(450px, 0, 30s);
   }
 }
