--- a/src/app/home-page/home-page-support/home-page-support.component.scss
+++ b/src/app/home-page/home-page-support/home-page-support.component.scss
@@ -34,3 +34,30 @@
     width: fit-content;
   }
 }
+
+@media (max-width: 1499px) {
+  .wrapper {
+    padding: 150px 0 100px;
+  }
+  .personal-wrapper {
+    min-height: 460px;
+  }
+  
+  .main-info {
+    margin-left: 100px;
+  
+    &__text {
+      font-size: 16px;
+      line-height: 23px;
+      margin-bottom: 45px;
+  
+      p {
+        margin-bottom: 33px;
+      }
+    }
+  
+    &__wrap {
+      max-width: initial;
+    }
+  }
+}
