--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -344,4 +344,156 @@ h1 {
     text-align: center;
     margin-bottom: 15px;
   }
+  .arrows{
+    width: 100%;
+    height: 430px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .arrow{
+      position: absolute;
+      width: 100%;
+      top: 20%;
+    }
+  }
+}
+
+@media (max-width: 1499px) {
+  :host::ng-deep {
+    .wrapper{
+      max-width: 1010px;
+    }
+    .section__subtitle{
+      font-size: 12px;
+      line-height: 15px;
+      margin: 0 0 16px;
+    }
+    .section__title{
+      font-size: 36px;
+      line-height: 45px;
+      margin: 0 0 25px;
+    }
+  }
+
+  .search{
+    height: 540px;
+    &::after{
+      width: 75%;
+      height: 105%;
+      top: 0%;
+      left: -20%;  
+    }
+    &::before{
+      width: 85%;
+      height: 95%;
+      top: -50%;
+      right: -15%;  
+    }
+  }
+  .how-work{
+    padding: 120px 0 0px;
+  }
+  .question{
+    padding-top: 100px;
+    .arrows{
+      position: absolute;
+      width: 100%;
+      height: 390px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      overflow: hidden;
+      .arrow{
+        position: absolute;
+        width: 100%;
+        &:first-child{
+          transform: rotate(180deg)
+        }
+        &:last-child{
+          transform: rotate(6deg);
+        }
+      }
+    }
+    &::before{
+      top: 50%;
+      left: 73%;
+      max-width: 500px;
+      max-height: 500px;
+    }
+  }
+  .app-news{
+    padding: 50px 0 60px;
+  }
+  .get-start{
+    padding: 80px 150px;
+    .wrapper{
+      &::after {
+        top: -40px;
+        left: -60px;
+      }
+    }
+    &__wrap{
+      max-width: 840px;
+      padding: 30px 50px;
+    }
+    &__title{
+      font-size: 24px;
+      line-height: 30px;
+    }
+    &__text{
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+  .footer{
+    height: 400px;
+    &::after{
+      width: 35%;
+      height: 100%;
+      top: 10%;
+      left: -6%;
+    }
+    &::before{
+      width: 65%;
+      height: 85%;
+      bottom: -20%;
+      right: -5%;
+    }
+    .column{
+      width: 16%;
+      margin-bottom: 20px;
+      &-title{
+        font-size: 16px;
+        line-height: 20px;
+        margin: 0 0 15px;
+      }
+      &-item{
+        font-size: 14px;
+        line-height: 18px;
+      }
+    }
+    .copyright{
+      font-size: 13px;
+      line-height: 16px;
+    }
+    .arrows{
+      width: 100%;
+      height: 400px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      .arrow{
+        position: absolute;
+        width: 100%;
+        top: 20%;
+      }
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+
 }
