--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -444,15 +444,20 @@
       line-height: 18px;
       min-width: 145px;
     }
+    ::ng-deep {
+      .btn {
+        font-size: 13px;
+        line-height: 16px;
+        padding: 13px 20px;
+      }
+    }
 }
 
 
-@media (max-width: 1499px) {
+@media (max-width: 1199.98px) {
   ::ng-deep {
     .btn {
-      font-size: 13px;
-      line-height: 16px;
-      padding: 13px 20px;
+      padding: 13px 15px;
     }
   }
 }
