--- a/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.scss
+++ b/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.scss
@@ -105,3 +105,58 @@
         }
     }
 }
+
+@media (max-width: 1199.98px) {
+    .wrapper{
+        padding: 80px 0 80px;
+    }
+    .main-info{
+        max-width: 440px;
+        margin-bottom: 30px;
+        &__wrap{
+            margin-bottom: 30px; 
+        }
+    }
+    .freelancer-list{
+        margin: 0 -16px;
+        &::after{
+            content: "";
+            position: absolute;
+            z-index: 0;
+            top: -70px;
+            right: 0px;
+            width: 102px;
+            height: 118px;
+            background-image: url(/assets/images/images/dots-advantages.svg)
+        }
+    }
+    .freelancer-item{
+        width: calc(33% - 30px);
+        margin: 0 15px 25px;
+        padding: 20px 5px 18px 19px;
+        &__top{
+            margin-bottom: 12px;
+            align-items: flex-start;
+        }
+        &__icon{
+            width: 20px;
+            height: 20px;
+            margin-right: 12px;
+            display: flex;
+
+            img{
+                max-width: 100%;
+            }
+        }
+        &__title{
+            font-size: 13px;
+            line-height: 15px;
+        }
+        &__text{
+            font-size: 13px;
+            line-height: 16px;
+            margin-left: 0;
+        }
+    }
+}
+@media (max-width: 767.98px) {}
