--- a/src/app/home-page/home-page-how-work/home-page-how-work.component.scss
+++ b/src/app/home-page/home-page-how-work/home-page-how-work.component.scss
@@ -306,3 +306,120 @@
         }
     }
 }
+
+@media (max-width: 1199.98px) {
+    .main-info{
+        width: 40%;
+    }
+    .tabs{
+        max-width: 275px;
+        &-list{
+            .tab{
+                font-size: 16px;
+                line-height: 20px;
+            }
+        }
+        &-slider{
+           .indicator{
+                width: 120px;
+                &.activeTwo{
+                    transform: translateX(calc(275px - 96%));
+                }
+           }
+        }
+        .tabs-text{
+            p{
+                font-size: 14px;
+                line-height: 20px;
+                margin: 0 0 22px;
+            }
+        }
+        &::after{
+            display: none;
+        }
+    }
+    .steps{
+        width: 60%;
+        min-height: 460px;
+        &-list{
+            min-height: 460px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding-left: 30px;
+            &::before{
+                left: 35%;
+            }
+            &::after{
+                content: "";
+                position: absolute;
+                z-index: -2;
+                top: 50%;
+                right: -20%;
+                width: 102px;
+                height: 118px;
+                background-image: url(/assets/images/images/dots-advantages.svg)
+            }
+        }
+    }
+    .step{  
+        margin-bottom: 23px;
+        &-number{
+            min-width: 22px;
+            min-height: 22px;
+        }
+        &-img-wrap{
+            img{
+                width: 85%;
+                height: 85%;
+                object-fit: contain;
+            }
+            &:nth-child(1){
+                height: 85px;
+                img{
+                    width: 85%;
+                    height: 85%;
+                    object-fit: contain;
+                }
+            }
+            &:nth-child(2){
+                height: 76px;
+                img{
+                    width: 85%;
+                    height: 85%;
+                    object-fit: contain;
+                }
+            }
+            &:nth-child(3){
+                height: 106px;
+                img{
+                    width: 85%;
+                    height: 85%;
+                    object-fit: contain;
+                }
+            }
+            &:nth-child(4){
+                height: 80px;
+                img{
+                    width: 85%;
+                    height: 85%;
+                    object-fit: contain;
+                }
+            }
+        }
+        &-text{
+            font-size: 13px;
+            line-height: 19px;
+            max-width: 180px;
+        }
+    }
+    .flip-container{
+        perspective: 1000;
+        width: 140px;
+        height: 80px;
+            
+        .front, .back {
+            width: 140px;
+        }
+    }
+}
