--- a/src/app/home-page/home-page-support/home-page-support-personal/home-page-support-personal.component.scss
+++ b/src/app/home-page/home-page-support/home-page-support-personal/home-page-support-personal.component.scss
@@ -329,3 +329,102 @@ $orbit-color: $gray;
     @include orbit(450px, 0, 30s);
   }
 }
+
+@media (max-width: 1199.98px) {
+  .orbit {
+    border: solid 1px #E9ECFB;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+  
+    &.small {
+      z-index: 3;
+      border-radius: 50%;
+      left: 100px;
+      top: 100px;
+  
+      .sphere {
+        animation: spinBack 18s linear infinite;
+        &:nth-child(1) {
+          bottom: 0;
+          right: -40px;
+        }
+  
+        &:nth-child(2) {
+          top: 40px;
+          left: 25px;
+        }
+      }
+    }
+  
+    &.medium {
+      z-index: 2;
+      left: 50px;
+      top: 50px;
+      border-radius: 50%;
+      .sphere {
+        animation: spinBack 24s linear infinite;
+  
+        &:nth-child(1) {
+          bottom: -30px;
+          left: 0px;
+        }
+  
+        &:nth-child(2) {
+          top: 40px;
+          left: 0;
+        }
+      }
+    }
+  
+    &.large {
+      border-radius: 50%;
+      .sphere {
+        animation: spinBack 30s linear infinite;
+        &:nth-child(1) {
+          top: -50px;
+          left: 40%;
+        }
+        &:nth-child(2) {
+          top: 270px;
+          right: 0;
+        }
+      }
+  
+      &::before {
+        width: 260px;
+        height: 260px;
+      }
+    }
+    .sphere {
+  
+      &.small {
+        width: 55px;
+        height: 55px;
+      }
+  
+      &.medium {
+        width: 75px;
+        height: 75px;
+      }
+  
+      &.large {
+        width: 95px;
+        height: 95px;
+        border: 3px solid #fff;
+      }
+    }
+  
+  }
+  .orbit.small {
+    @include orbit(250px, 0, 18s);
+  }
+  
+  .orbit.medium {
+    @include orbit(300px, 0, 24s);
+  }
+  
+  .orbit.large {
+    @include orbit(400px, 0, 30s);
+  }
+}
