--- a/src/app/home-page/home-page-support/home-page-support.component.scss
+++ b/src/app/home-page/home-page-support/home-page-support.component.scss
@@ -61,3 +61,36 @@
     }
   }
 }
+
+@media (max-width: 1199.98px) {
+  .wrapper {
+    padding: 100px 0 30px
+  }
+  .personal-wrapper {
+    min-height: 460px;
+    width: 70%;
+  }
+  
+  .main-info {
+    margin-left: 0;
+    width: 30%;
+    &__text {
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 25px;
+  
+      p {
+        margin-bottom: 25px;
+      }
+    }
+  
+    &__wrap {
+      max-width: initial;
+    }
+    .btn{
+      position: absolute;
+      white-space: nowrap;
+      right: 0;
+    }
+  }
+}
