--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -70,7 +70,7 @@ h1 {
     height: 45%;
     top: 10%;
     left: 0%;
-    z-index: 9;
+    z-index: 5;
   }
   &::before{
     content: "";
@@ -83,7 +83,7 @@ h1 {
     height: 45%;
     top: -20%;
     right: -5%;
-    z-index: 9;
+    z-index: 5;
   }
 }
 
@@ -494,6 +494,137 @@ h1 {
   }
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1199.98px) {
+  :host::ng-deep {
+    .wrapper{
+      max-width: 690px;
+    }
+    .section__subtitle{
+      font-size: 10px;
+      line-height: 13px;
+      margin: 0 0 18px;
+    }
+    .section__title{
+      font-size: 24px;
+      line-height: 30px;
+      margin: 0 0 30px;
+    }
+  }
+  .search{
+    height: 330px;
+    &::after{
+      width: 65%;
+      height: 95%;
+      top: 0%;
+      left: -10%;
+    }
+    &::before{
+      width: 85%;
+      height: 105%;
+      top: -60%;
+      right: -25%;
+    }
+  }
+  .advantages{
+    height: 105%;
+  }
+  .how-work{
+    padding: 140px 0 0px;
+    overflow: hidden;
+  }
+  .question{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    &::before{
+      top: 48%;
+      left: 69%;
+      max-width: 340px;
+      max-height: 340px;
+    }
+  }
+  .get-start{
+    padding: 80px 0;
+    .wrapper{
+      &::after {
+        top: -50px;
+        left: -10px;
+        width: 60px;
+        height: 70px;
+        background-size: contain;
+      }
+    }
+    &__wrap{
+      max-width: initial;
+    box-shadow: 0px 0px 17px rgba(128, 152, 213, 0.16);
+    }
+    &__title{
+      font-size: 18px;
+      line-height: 23px;
+    }
+    &__text{
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
 
+  .footer{
+    height: 330px;
+    &::after{
+      width: 35%;
+      height: 100%;
+      top: 10%;
+      left: -6%;
+    }
+    &::before{
+      width: 65%;
+      height: 85%;
+      bottom: -20%;
+      right: -5%;
+    }
+    .column{
+      width: auto;
+      margin-bottom: 20px;
+      &-title{
+        font-size: 16px;
+        line-height: 20px;
+        margin: 0 0 15px;
+      }
+      &-item{
+        font-size: 13px;
+        line-height: 16px;
+      }
+      .column{
+        &:nth-child(1){
+          margin-right: auto;
+          width: 20%;
+        }
+        &:nth-child(2){
+          width: 28%;
+        }
+        &:nth-child(3){
+          width: 29%;
+        }
+        &:nth-child(4){
+          width: 14%;
+        }
+      }
+    }
+    .copyright{
+      font-size: 13px;
+      line-height: 16px;
+    }
+    .arrows{
+      width: 100%;
+      height: 400px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      .arrow{
+        position: absolute;
+        width: 100%;
+        top: 20%;
+      }
+    }
+  }
 }
